--- a/config.yaml
+++ b/config.yaml
@@ -17,6 +17,6 @@ delayTime: 30.0
 
 pageTitle: 'TwitterPrinter'
 
-searchHashtag: 'TwitterPrinter'
+searchHashtag: 'TwitterRevolution'
 
 templateFileName: 'main.html'
